Deleted user-select: none to fix bug where input fields on iPhone didn't work

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,33 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 * {
-    -webkit-tap-highlight-color: transparent;
-    font-family: "Balsamiq Sans", cursive;
+  -webkit-tap-highlight-color: transparent;
+  font-family: "Balsamiq Sans", cursive;
 }
 
 /* background-image: linear-gradient(to top, #b84de7, #9762ee, #7670f0, #547bec, #3682e3); */
 
 html,
 body {
-    padding: 0;
-    margin: 0;
-    font-family: "Balsamiq Sans", cursive;
-    overscroll-behavior-y: contain;
+  padding: 0;
+  margin: 0;
+  font-family: "Balsamiq Sans", cursive;
+  overscroll-behavior-y: contain;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 * {
-    box-sizing: border-box;
-}
-
-@media screen and (max-width: 640px) {
-    * {
-        user-select: none;
-    }
+  box-sizing: border-box;
 }
 
 @tailwind base;
@@ -35,17 +29,17 @@ a {
 @tailwind utilities;
 
 @layer utilities {
-    @variants responsive {
-        .max-w-50 {
-            max-width: 80vw;
-        }
-
-        .max-h-80screen {
-            max-height: 80vh;
-        }
-
-        .max-w-card {
-            max-width: 10rem;
-        }
+  @variants responsive {
+    .max-w-50 {
+      max-width: 80vw;
     }
+
+    .max-h-80screen {
+      max-height: 80vh;
+    }
+
+    .max-w-card {
+      max-width: 10rem;
+    }
+  }
 }
